--- a/.env.example
+++ b/.env.example
@@ -55,7 +55,7 @@ EMAIL_CLAIM_CONFIGURATION_GRANT_TYPE=client_credentials
 EMAIL_CLAIM_CONFIGURATION_CLIENT_ID=3
 EMAIL_CLAIM_CONFIGURATION_CLIENT_SECRET=X4cRipgGU5Ch2qqpdpMx4DRW1mfVgza0o0gsf2yA
 
-FRONTEND_URL=http://163.172.106.97:3011/
-MOBILE_BACKOFFICE_URL=http://163.172.106.97:8022/
+FRONTEND_URL=http://163.172.106.97:3011
+MOBILE_BACKOFFICE_URL=http://163.172.106.97:8022
 MAIL_SERVICE_URL=http://163.172.106.97:8010
 WORDPRESS_PLUGIN_URL=http://163.172.106.97:8111
